增加日志变色
